--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <!-- Second section-->
       <section class="opis">
         <div class="container">
-          <h2 class="base-h-two">Advantages</h2>
+          <h2 class="base-h-two-van visually-hidden">Advantages</h2>
           <ul class="opis-ul">
             <li class="opis-li">
               <h3 class="base-h-tri">Strategy</h3>
@@ -167,9 +167,10 @@
                 alt="photo-Banking-App"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div"></div>
-              <h3 class="base-h-tri">Banking App</h3>
-              <p class="base-p">App</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Banking App</h3>
+                <p class="base-p">App</p>
               </div>
             </li>
             <li class="portfolio-li">
@@ -178,9 +179,10 @@
                 alt="photo-Cashless-Payment"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div"></div>
-              <h3 class="base-h-tri">Cashless Payment</h3>
-              <p class="base-p">Marketing</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Cashless Payment</h3>
+                <p class="base-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-li">
@@ -189,9 +191,10 @@
                 alt="photo-Meditation"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div"></div>
-              <h3 class="base-h-tri">Meditation App</h3>
-              <p class="base-p">App</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Meditation App</h3>
+                <p class="base-p">App</p>
               </div>
             </li>
             <li class="portfolio-li">
@@ -200,9 +203,10 @@
                 alt="photo-Taxi"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div">
-              <h3 class="base-h-tri">Taxi Service</h3>
-              <p class="base-p">Marketing</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Taxi Service</h3>
+                <p class="base-p">Marketing</p>
               </div>
             </li>
             <li class="portfolio-li">
@@ -211,9 +215,10 @@
                 alt="photo-Screen-Illustrations"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div"></div>
-              <h3 class="base-h-tri">Screen Illustrations</h3>
-              <p class="base-p">Design</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Screen Illustrations</h3>
+                <p class="base-p">Design</p>
               </div>
             </li>
             <li class="portfolio-li">
@@ -222,9 +227,10 @@
                 alt="photo-Online-Courses"
                 width="360"
                 height="300"
-              /> <div class="portfilio-div"></div>
-              <h3 class="base-h-tri">Online Courses</h3>
-              <p class="base-p">Marketing</p>
+              />
+              <div class="portfilio-div">
+                <h3 class="base-h-tri">Online Courses</h3>
+                <p class="base-p">Marketing</p>
               </div>
             </li>
           </ul>
@@ -234,14 +240,14 @@
     </main>
 
     <footer class="footer">
-      <div class="container">         
-      <a href="./index.html" class="logo-futer"
-        >Web<span class="logo-futer-span">Studio</span></a
-      >
-      <p class="footer-p">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="logo-futer"
+          >Web<span class="logo-futer-span">Studio</span></a
+        >
+        <p class="footer-p">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
