--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
           <a href="./index.html" class="logo"
             >Web<span class="logo-text">Studio</span></a
           >
-          <ul>
+          <ul class="header-ul-class">
             <li><a href="./index.html" class="link-header">Studio</a></li>
             <li><a href="" class="link-header">Portfolio</a></li>
             <li><a href="" class="link-header">Contacts</a></li>
           </ul>
         </nav>
         <address class="address-head">
-          <ul>
+          <ul class="address-class">
             <li>
               <a href="mailto:info@devstudio.com" class="address-link"
                 >info@devstudio.com</a
